[tool.poetry]
name = "python-algorithm"
version = "0.1.0"
description = "Calculate word counts in a text file."
authors = ["Joey Zhou"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_algorithm", from = 'python_algorithm' },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
