[tool.poetry]
name = "python-algorithm"
version = "0.1.1"
description = "Personal Algorithms practice."
authors = ["Joey Zhou"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_algorithm", from = 'src' },
]

[tool.poetry.scripts]
eight_queens = 'python_algorithm.StackAndQueue.eight_queens:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.27.0"

[tool.semantic-release]
version_variable = "pyroject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
